# assistive-arm

./: .gitignore  Dockerfile  IMU_Profile_2025-05-19_Trial1.csv  IMU_Profile_2025-05-19_Trial2.csv  IMU_Profile_2025-05-19_Trial3.csv  IMU_Profile_2025-05-19_Trial4.csv  IMU_Profile_2025-05-19_Trial5.csv  IMU_Profile_2025-05-19_Trial_1.csv  IMU_Profile_2025-05-19_Trial_2.csv  IMU_Profile_2025-05-19_Trial_3.csv  IMU_Profile_2025-05-19_Trial_4.csv  IMU_Profile_2025-05-19_Trial_5.csv  IMU_Profile_2025-05-20_Trial_1.csv  IMU_Profile_2025-05-20_Trial_2.csv  IMU_Profile_2025-05-20_Trial_3.csv  IMU_Profile_2025-05-20_Trial_4.csv  IMU_Profile_2025-05-20_Trial_5.csv  IMU_Profile_2025-05-21_Trial_1.csv  IMU_Profile_2025-05-21_Trial_2.csv  IMU_Profile_2025-05-21_Trial_3.csv  IMU_Profile_2025-05-21_Trial_4.csv  IMU_Profile_2025-05-21_Trial_5.csv  IMU_Profile_2025-05-27_Trial_1.csv  IMU_Profile_2025-05-27_Trial_2.csv  IMU_Profile_2025-05-27_Trial_3.csv  IMU_Profile_2025-05-27_Trial_4.csv  IMU_Profile_2025-05-27_Trial_5.csv  README.md  Untitled.ipynb  Untitled1.ipynb  client_test.py  docker-compose.yml  filtered.mot  imu_data.csv  install.sh  motor_config.yaml  motor_data.csv  pyproject.toml  simplified_model.osim  svr_phase_model.joblib  (+6 more)
Bayes/: HILO_bayes.py  HILO_bayes_class.py  bayes.ipynb  bayes_eval.py  bayes_evaluate_experiments.ipynb  bayes_simple.py  bayes_xy_6param.ipynb  bayes_y.ipynb  bayes_y_2p.ipynb  bayes_y_2param.ipynb  bayes_y_4param.ipynb  bayesian_optimization_progress.json  bayesian_optimization_progress_y.json
Delsys-EMG-Real-Time/: EMGDataCollector.py  TrainingManager.py  main copy.py  main.py  main_PhaseEst.py  path_setup.py  requirements.txt  test_socket_server_client.py
EMG_Realtime/: main.py
Opensim_moco/: readme.md
Phase Estimation/: BiasAndSegmentation.py  CYCLIC.py  CyclicSegmentationManager.py  DataLoader.py  DataLoaderIMU.py  DataLoaderYinkai.py  EulerTransform.py  GyroBias.py  Gyromagnitude.py  Interpolation.py  LassoRegressionCV.py  Linear_Reg.py  MatrixCreator.py  MultiSense.py  (+12 more)
(+590 files in other folders)
